--- a/style.css
+++ b/style.css
@@ -309,19 +309,14 @@ transform: scale(0.90); /* Reduce ligeramente el tamaño del botón cuando se ha
 
     
     
+   
     .circulo {
-        width: 130%; /* Reduce el tamaño del círculo en pantallas más pequeñas */
-        max-width: 300px;/* Aumenta el ancho del círculo para que desborde los bordes */
-        height: 65vh; /* Mantiene la proporción original */
-        margin: 0 auto; /* Centra el círculo horizontalmente y ajusta el desbordamiento */
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        overflow: hidden; /* Oculta cualquier contenido que desborde */
-        border-radius: 50%; 
-        position: relative;
+        width: 90vw; /* Haz el círculo un poco más grande en pantallas como el iPhone 13 Pro Max */
+        height: 90vw; /* Mantén la proporción en el alto */
+        margin: 12vh auto 0 auto; /* Coloca el círculo un poco más abajo para ajustarlo */
+        max-width: 500px; /* Tamaño máximo para pantallas grandes como el iPhone 13 Pro Max */
+        max-height: 500px; /* Tamaño máximo para la altura */
     }
-    
 
     #botonEmpezar {
         position: absolute;
