--- a/style.css
+++ b/style.css
@@ -307,16 +307,22 @@ transform: scale(0.90); /* Reduce ligeramente el tamaño del botón cuando se ha
     }
     
 
-    
-    
-   
     .circulo {
-        width: 90vw; /* Haz el círculo un poco más grande en pantallas como el iPhone 13 Pro Max */
-        height: 90vw; /* Mantén la proporción en el alto */
-        margin: 12vh auto 0 auto; /* Coloca el círculo un poco más abajo para ajustarlo */
-        max-width: 500px; /* Tamaño máximo para pantallas grandes como el iPhone 13 Pro Max */
-        max-height: 500px; /* Tamaño máximo para la altura */
+        position: absolute;
+        top: 100%; /* Ajusta la posición vertical */
+        left: 75%;
+        transform: translate(-50%, -50%); /* Centra el círculo */
+        width: 110%; /* Ajusta el tamaño del círculo */
+        height: auto; /* Mantén la proporción */
+        margin: 0 -25%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        overflow: hidden; /* Oculta cualquier contenido que desborde */
+        border-radius: 50%; 
     }
+    
+    
 
     #botonEmpezar {
         position: absolute;
