--- a/style.css
+++ b/style.css
@@ -375,7 +375,7 @@ transform: scale(0.90); /* Reduce ligeramente el tamaño del botón cuando se ha
 
 
 
-@media (min-width: 430px) and (max-width: 932px) {
+@media only screen and (min-width: 375px) and (max-width: 896px) {
     body {
         padding-top: 25px;
     }
